# PyEmailAssistant

./: .gitignore  README.md  config.yml  pyproject.toml
analytics/: README.md  analysis.py  config.yml  dataset_analysis.py  main.py  model_analysis.py
analytics/output/: analysis_report.md  body_description.md  date_description.md  label_description.md  model_report.md  receiver_description.md  sender_description.md  subject_description.md  urls_description.md
analytics/output/objects/: body_vectorizer.joblib  domain_encoder.joblib  label_encoder.joblib  mnb_model.joblib  sender_encoder.joblib  subject_body_vectorizer.joblib  subject_encoder.joblib  subject_vectorizer.joblib  urls_encoder.joblib  xgbc_model.joblib
analytics/output/reports/: analysis_report.md  model_report.md
datasets/: citations.md
model/: body_vectorizer.joblib  subject_encoder.joblib  xgbc_model.joblib
src/pyemailassistant/: app.py  config.py  logger.py
src/pyemailassistant/errors/: __init__.py  app_errors.py
src/pyemailassistant/gui/: __init__.py  dialog_window.py  main_window.py
src/pyemailassistant/models/: __init__.py  model.py
